<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <TextView
        android:id="@+id/profile_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/Profile_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:padding="5dp"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"

        android:layout_width="320dp"
        android:layout_height="100dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="4dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_title">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <ImageView
                android:id="@+id/profile_icon"
                android:layout_width="42dp"
                android:layout_height="16dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="2dp"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="2dp"
                android:src="@drawable/profile_icon" />

            <TextView
                android:id="@+id/info_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@id/profile_icon"
                android:text="@string/Personal_info" />

            <View
                android:id="@+id/view_line"
                android:layout_width="match_parent"
                android:layout_height="1sp"
                android:layout_alignBottom="@id/info_text"
                android:layout_marginStart="46dp"
                android:layout_marginEnd="50dp"
                android:background="#BFC0C0C0"

                tools:ignore="SmallSp" />

            <ImageView
                android:id="@+id/profile_icon2"
                android:layout_width="42dp"
                android:layout_height="16dp"
                android:layout_alignTop="@id/view_line"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                android:src="@drawable/steps" />

            <TextView
                android:id="@+id/step_length"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/view_line"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="2dp"
                android:layout_toEndOf="@id/profile_icon2"
                android:text="@string/Step_length" />

            <Spinner
                android:id="@+id/step_length_drop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/step_length"
                android:layout_alignTop="@id/view_line"
                android:layout_alignBottom="@id/view_line2"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="200dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="4dp" />

            <View
                android:id="@+id/view_line2"
                android:layout_width="match_parent"
                android:layout_height="1sp"
                android:layout_alignBottom="@id/step_length"
                android:layout_marginStart="46dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="50dp"
                android:background="#BFC0C0C0"

                tools:ignore="SmallSp" />

            <ImageView
                android:id="@+id/profile_icon3"
                android:layout_width="42dp"
                android:layout_height="16dp"
                android:layout_alignTop="@id/view_line2"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                android:src="@drawable/steps" />

            <TextView
                android:id="@+id/Step_goal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/view_line2"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="2dp"
                android:layout_toEndOf="@id/profile_icon3"
                android:text="@string/Step_goal" />

            <Spinner
                android:id="@+id/step_goal_drop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/Step_goal"
                android:layout_alignTop="@id/view_line2"
                android:layout_alignBottom="@id/view_line3"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="200dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="4dp" />


            <View
                android:id="@+id/view_line3"
                android:layout_width="match_parent"
                android:layout_height="1sp"
                android:layout_alignBottom="@id/Step_goal"
                android:layout_marginStart="46dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="50dp"
                android:background="#BFC0C0C0"

                tools:ignore="SmallSp" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_Instructions"

        android:layout_width="320dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4dp"
        android:layout_marginTop="40dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_view"
        app:layout_constraintEnd_toEndOf="parent"
        >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <ImageView
            android:id="@+id/profile_icon4"
            android:layout_width="42dp"
            android:layout_height="16dp"
            android:src="@drawable/instructions"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="10dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            />

        <TextView
            android:id="@+id/Instructions_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Instruction"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@id/profile_icon4"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="2dp"
            />

        <View
            android:id="@+id/view_line4"
            android:layout_width="match_parent"
            android:layout_height="1sp"
            android:background="#BFC0C0C0"
            android:layout_alignBottom="@id/Instructions_text"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="46dp"
            android:layout_marginTop="10dp"

            tools:ignore="SmallSp" />

    </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view3"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

    <ImageView
        android:id="@+id/Today_icon"
        android:layout_width="60dp"
        android:layout_height="26dp"
        android:src="@drawable/home_icon"
        android:layout_marginTop="3dp"
        android:layout_marginStart="52dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        />

        <TextView
            android:id="@+id/Today_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/Today_icon"
            android:layout_alignParentStart="true"
            android:layout_marginStart="70dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="2dp"
            android:text="@string/today_label"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <ImageView
            android:id="@+id/Profile_icon5"
            android:layout_width="45dp"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="52dp"
            android:layout_marginBottom="2dp"

            android:src="@drawable/profile_icon" />

        <TextView
            android:id="@+id/profile_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/Profile_icon5"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="60dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="2dp"
            android:text="@string/profile_label"
            android:textSize="10sp"
            tools:ignore="SmallSp" />
    </RelativeLayout>


    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>